--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'application'
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
 }
@@ -63,3 +64,7 @@ compileTestKotlin {
 
 task stage(dependsOn: ['build', 'clean'])
 build.mustRunAfter clean
+
+application {
+    mainClassName 'com.zachtib.spoilers.MainKt'
+}
